--- a/main.css
+++ b/main.css
@@ -1,8 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300&display=swap');
 
 .autocomplete-wrapper {
-    width: auto;
-    min-width: 500px;
+    width: 500px;
     height: 210px;
     background-color: #f5f5f5;
     font-family: 'Inconsolata', monospace;
@@ -18,11 +17,13 @@
 }
 
 .item {
-    width: 100%;
+    width: calc(100% - 30px);
     line-height: 30px;
-    height: 30px;
+    min-height: 30px;
+    height: auto;
     background-color: transparent;
     cursor: pointer;
+    display: inline-block;
 }
 
 .item:hover, .item:focus {
@@ -35,6 +36,7 @@
 
 ::-webkit-scrollbar {
     width: 10px;
+    height: 10px;
 }
 
 ::-webkit-scrollbar-track {
@@ -48,4 +50,47 @@
 
 ::-webkit-scrollbar-thumb:hover {
     background: #888;
+}
+
+.context-menu {
+    width: 300px;
+    height: 247px;
+    background: linear-gradient(to right, #1dcb95, deepskyblue);
+    z-index: 5;
+    user-select: none;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    box-shadow: 1px 1px 5px;
+    border-radius: 5px;
+    display: none;
+}
+
+.context-menu-wrapper {
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    width: calc(100% - 4px);
+    height: calc(100% - 4px);
+    background-color: #f5f5f5;
+    border-radius: 5px;
+}
+
+.context-menu-item {
+    width: 100%;
+    height: 30px;
+    background: #f5f5f5;
+    line-height: 30px;
+    font-size: 15px;
+    padding-left: 5px;
+    transition: 0.5s;
+}
+
+.context-menu-item:hover {
+    background: linear-gradient(to right, #1dcb95, deepskyblue);
+    text-decoration: underline;
+    color: white;
+    font-weight: bold;
+    padding-left: 10px;
+    cursor: pointer;
 }
